Update and rename helloWorld.html to index.html
update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function makeCorsRequest() {
             const xhr = new XMLHttpRequest();
-            const url = 'app-eu1.hubspot.com/api/login-verify/user-info
+            const url = 'https://app-eu1.hubspot.com/api/login-verify/user-info
 
             xhr.open('GET', url, true);
             xhr.withCredentials = true; 
