--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ console.log(portalId)
             }
           };
 
-          xhr3.send(JSON.stringify(putData));
+          xhr3.send();
         }
       };
 
-      xhr2.send(JSON.stringify(userData));
+      xhr2.send();
     }
   };
 
